# ECS-Application

./: .gitignore  .travis.yml  CMakeLists.txt  EntityApplication.sln  README.md  makefile
EntityApplication/: Entity.hpp  EntityApplication  EntityApplication.cpp  EntityApplication.vcxproj  EntityApplication.vcxproj.filters  EntityArchetype.hpp  EntityChunk.hpp  EntityGroup.hpp  EntityGroupArray.hpp  EntityManager.hpp  TODO.md  compile.sh  main.cpp
EntityApplication/Types/: ComponentType.hpp
example/: main.cpp
include/: Entity.hpp  EntityArchetype.hpp  EntityChunk.hpp  EntityGroup.hpp  EntityManager.hpp  Types.hpp
include/Iterators/: ComponentArray.hpp
include/Types/: ComponentType.hpp
src/: Entity.cpp  Entity.hpp  EntityApplication.cpp  EntityGroup.hpp  TODO.md  Types.hpp
src/Iterators/: EntityArray.hpp
src/Types/: ComponentType.hpp
tests/: CMakeLists.txt  main.cpp  testcase.cpp
